--- a/project/eccocar.html
+++ b/project/eccocar.html
@@ -43,9 +43,9 @@
       -moz-osx-font-smoothing: grayscale;
     }
   </style>
-  <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/eccocar.css">
+  <link rel="stylesheet" href="../assets/css/common-project.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -87,29 +87,69 @@
     </div>
   </div>
 
-  <section class="pd-hero-container">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row" style="height:100%">
-        <div class="col-md-6 col-sm-12 hero-col"
-          style="display:flex;flex-direction:column;align-items:start;justify-content:center;padding-left:8rem">
-          <h1 class="pd-hero-title">EccoCar</h1>
-          <p class="pd-hero-subtitle">Reservation Management System</p>
-        </div>
-        <div class="col-md-6 col-sm-12 eccocar-col">
-          <img src="../assets/projects/eccocar/hero-eccocar.webp" alt="">
-        </div>
+  <section class="hero-section eccocar-project-page">
+    <div class="container">
+      <div class="project-name">
+        <h2>EccoCar</h2>
+        <p>Reservation Management System</p>
       </div>
     </div>
   </section>
 
-  <!-- our work  ---->
   <section class="eccocar-container">
-
     <div class="container text-center">
-      <div class="row eccocar-detail-row gx-5">
+      <div class="row answerbook-row gx-5">
+        <div class="col">
+          <div class="text-start">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="Duration">
+                  <h2 class="duration-title common-title"><i class="fa-sharp fa-regular fa-clock"></i>Duration</h2>
+                  <div class="duration-info d-flex mt-1">
+                    <p class="common-badge">January 2021 - May 2021</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="Client">
+                  <h2 class="Client-title common-title"><i class="fa-sharp fa-solid fa-user-tie"></i>Client</h2>
+                  <div class="Client-info d-flex mt-1">
+                    <p class="common-badge">Answerbook (An educational startup)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa-sharp fa-solid fa-globe"></i>Platform</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Web / IOS / Android</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>Location</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Europe</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="technologies mt-1">
+                  <h2 class="technology-title common-title"><i class="fa-solid fa-code"></i>Technologies</h2>
+                  <div class="technologie-info d-flex mt-1">
+                    <p class="common-badge">React Native, Spring boot, Angular, Jenkins</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col col-md-12 col-lg-6">
           <div class="">
-            <h1 class="text-start mb-3 pd-about-title">Overview</h1>
+            <h2 class="text-start mb-3 pd-about-title">Overview</h2>
             <p class="text-start pd-about-text eccocar-about eccocar-sm-font">
               Sustainable value in work is something that moves Eccocar every day, the perspective of mobility on
               demand, communication and connection between mobility platforms and users. Eccocar wanted to connect
@@ -119,50 +159,79 @@
               as a technology partner to help them address their needs with an efficient IT solution.</p>
           </div>
         </div>
-        <div class="col">
+      </div>
+    </div>
+  </section>
+
+  <section class="project-detials eccocar-project-details">
+    <div class="container pb-3">
+      <div class="row">
+        <div class="col col-md-12 col-lg-6">
           <div class="text-start">
-            <div class="Duration">
-              <h2 class="duration-title">Duration</h2>
-              <div class="duration-info d-flex mt-1">
-                <p style="margin-right:10px;">January 2021 - May 2021</p>
+            <h2 class="features-container-title">Reservation Management System (RMS)</h2>
+            <p class="text-start text-white eccocar-sm-font eccocar-about pt-1">Eccocar wanted a platform where their partners can launch their own shared mobility services within short period of time. Eccocar wanted a Digital solution that can be integrated between Eccocar and their partner's RMS, where partners can choose the modules they want to operate with. Below are the features that users would be able to use within the RMS to improve their car rental strategy and operational efficiency.</p>
+          
+          </div>
+        </div>
+        <div class="col col-md-12 offset-md-1 col-lg-5">
+          <div class="text-start">
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Manage Users and User groups
+                </div>
               </div>
             </div>
-            <div class="Client">
-              <h2 class="Client-title">Client</h2>
-              <div class="Client-info d-flex mt-1">
-                <p style="margin-right:10px;">Answerbook (An educational startup)</p>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Manage different Vehicles
+                </div>
               </div>
             </div>
-            <div class="Location">
-              <h2 class="Location-title">Location</h2>
-              <div class="Location-info d-flex mt-1">
-                <p style="margin-right:10px;">Europe</p>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Manage Reservations 
+                </div>
               </div>
             </div>
-            <div class="platform">
-              <h2 class="platform-title">Platform</h2>
-              <div class="platform-info d-flex mt-1">
-                <p style="margin-right:10px;">Web</p>
-                <p style="margin-right:10px;">IOS</p>
-                <p>Android</p>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Manage Billing for the reservation
+                </div>
               </div>
             </div>
-            <div class="technologies mt-1">
-              <h2 class="technology-title">Technologies</h2>
-              <div class="technologie-info d-flex mt-1">
-                <p>React native</p>
-                <p>Spring boot</p>
-                <p>Angular</p>
-                <p>Jenkins</p>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading bryllance-sub-heading text-white">
+                  Manage hierarchy within the organization
+                </div>
+              </div>
+            </div>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading bryllance-sub-heading text-white">
+                  Detailed reports on fleet usage and mobility costs
+                </div>
+              </div>
+            </div>
+            <div class="feature-content">
+              <div class="feature-details d-flex align-items-center mt-3">
+                <div class="feature-heading bryllance-sub-heading text-white">
+                  Set Alerts on important events
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
 
-  <div id="eccocarcarouse" class="carousel eccocar-slider slide container mt-5 mb-5" data-bs-ride="true">
+  <div id="eccocarcarouse" class="carousel eccocar-slider slide container mb-5 mt-3" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -197,43 +266,9 @@
     </button>
   </div>
 
-  <section style="background-color:#3F3B3B;">
-    <div class="container pb-3">
-      <h2 class="text-start pt-4" style="color: #FEB062;font-family: 'Poppins', sans-serif">Reservation Management System (RMS)</h2>
-      <p class="text-start text-white eccocar-sm-font eccocar-about pt-1">Eccocar wanted a platform where their partners can launch their own shared mobility services within short period of time. Eccocar wanted a Digital solution that can be integrated between Eccocar and their partner's RMS, where partners can choose the modules they want to operate with. Below are the features that users would be able to use within the RMS to improve their car rental strategy and operational efficiency.</p>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/group.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Manage Users and User groups </div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/Vehicle.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Manage different Vehicles</div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/Manage Reservations.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Manage Reservations</div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/billing.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Manage Billing for the reservation</div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/hierarchy.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Manage hierarchy within the organization</div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/detail.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Detailed reports on fleet usage and mobility costs</div>
-      </div>
-      <div class="eccocar-detail d-flex align-items-center mb-3">
-        <div class="eccocar-icon me-3"><img src="../assets/projects/eccocar/alert.png" class="eccocar-icon-width"></div>
-        <div class="eccocar-info text-white">Set Alerts on important events</div>
-      </div>
-    </div>
-    </div>
-  </section>
-  <section style="background-color: #000;"> 
-  <div id="carouselExampleIndicators-2" class="carousel slide mt-5" data-bs-ride="true">
+  
+  <section class="carousel-black-section" style="background-color: #000;"> 
+  <div id="carouselExampleIndicators-2" class="carousel slide" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators-2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators-2" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -242,9 +277,9 @@
       <button type="button" data-bs-target="#carouselExampleIndicators-2" data-bs-slide-to="4" aria-label="Slide 5"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators-2" data-bs-slide-to="5" aria-label="Slide 6"></button>
     </div>
-    <div class="carousel-inner pb-4">
+    <div class="carousel-inner">
       <div class="carousel-item active" style="background-color: #000;">
-        <div class="container eccocar-mobile-info d-flex mt-4 pb-4">
+        <div class="container eccocar-mobile-info d-flex">
           <div class="eccocar-mobile-left"><img src="../assets/projects/eccocar/WhiteLabel App.png" alt=""></div>
           <div class="eccocar-mobile-right">
             <h3>White Label App</h3>
@@ -308,12 +343,14 @@
     </button>
   </div>
 </section>
-  <div class="container last-section mt-3">
+<section class="eccocar-last-section">
+  <div class="container">
     <h2 class="text-start mb-3">IN THE END...</h2>
     <p class="text-start eccocar-sm-font">Eccocar managed to optimize their partner's  operating costs by reducing rental management time by 65%. Eccocar also helped their partners in increasing the retention rate by 20%. We started developing ECCOCAR in Fall of 2018, and we are now launching Phase 2 of the product.  Our partnership has spanned 650 hours, and will continue as we build new features. We expect ECCOCAR to soon transform the car rental industry by making the app more accessible and user-friendly to both the car rentals and customers globally. </p>
     <p class="text-start mb-4 eccocar-sm-font">
       If you’re working on a transformative product and looking for the right technical partner to execute your vision, reach out to our team and we’ll see how we can help.</p>
   </div>
+  </section>
 
   <!-- footer section  ---->
   <div class="footer-1 pt-5">
