--- a/project/petaments.html
+++ b/project/petaments.html
@@ -46,6 +46,7 @@
   <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/petaments.css">
+  <link rel="stylesheet" href="../assets/css/common-project.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -86,80 +87,79 @@
       </div>
     </div>
   </div>
-
-  <section class="pd-hero-container">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row petaments-hero-row" style="height:100%">
-        <div class="col-md-6 col-sm-12 hero-col"
-          style="display:flex;flex-direction:column;align-items:start;justify-content:center;padding-left:8rem">
-          <h1 class="pd-hero-title">Petaments</h1>
-          <p class="pd-hero-subtitle">Petaments (An E-Commerce Website)</p>
-        </div>
-        <div class="col-md-6 col-sm-12 petaments-hero-col">
-          <img src="../assets/projects/petaments/hero-imh" alt="">
-        </div>
+  <section class="hero-section petaments-project-page">
+    <div class="container">
+      <div class="project-name">
+        <h2>Petamentsr</h2>
+        <p>Petaments (An E-Commerce Website)</p>
       </div>
     </div>
   </section>
 
-  <!-- our work  ---->
-  <section class="petaments-container">
 
+  <section class="petaments-container">
     <div class="container text-center">
-      <div class="row gx-5 petaments-detail-row">
-        <div class="col col-md-12 col-lg-6">
-          <div class="">
-            <h1 class="text-start mb-3 pd-about-title">Overview</h1>
-            <p class="text-start petaments-para">Together with vets, nutritionists and dog owners Petaments have spent a lot of time to better understand which health issues are most common in dogs and how overall life quality can be improved with the right nutrition. They wanted to build a platform where they can offer products  based on the changing needs of the dogs. Petaments wants to make sure that every dogs gets all the nutrients he/she needs to lead a long, happy, and healthy life.</p>
-          </div>
-        </div>
+      <div class="row answerbook-row gx-5">
         <div class="col">
           <div class="text-start">
-            <div class="Duration">
-              <h2 class="duration-title">Duration</h2>
-              <div class="duration-info d-flex mt-1">
-                <p style="margin-right:10px;">January 2021 - Present</p>
-              </div>
-            </div>
-            <div class="Client">
-              <h2 class="Client-title">Client</h2>
-              <div class="Client-info d-flex mt-1">
-                <p style="margin-right:10px;">Petaments</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <div class="Location me-3">
-                <h2 class="Location-title">Location</h2>
-                <div class="Location-info d-flex mt-1">
-                  <p style="margin-right:10px;">Europe</p>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="Duration">
+                  <h2 class="duration-title common-title"><i class="fa-sharp fa-regular fa-clock"></i>Duration</h2>
+                  <div class="duration-info d-flex mt-1">
+                    <p class="common-badge">January 2021 - Present</p>
+                  </div>
                 </div>
               </div>
-              <div class="platform">
-                <h2 class="platform-title">Platform</h2>
-                <div class="platform-info d-flex mt-1">
-                  <p style="margin-right:10px;">Web</p>
+              <div class="col-md-6">
+                <div class="Client">
+                  <h2 class="Client-title common-title"><i class="fa-sharp fa-solid fa-user-tie"></i>Client</h2>
+                  <div class="Client-info d-flex mt-1">
+                    <p class="common-badge">Petaments</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>Location</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Europe</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa-sharp fa-solid fa-globe"></i>Platform</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Web</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="technologies mt-1">
+                  <h2 class="technology-title common-title"><i class="fa-solid fa-code"></i>Technologies</h2>
+                  <div class="technologie-info d-flex mt-1">
+                    <p class="common-badge">NextJS, NodeJS, ParseServer, PostgreSQL, React material UI, Stripe integration, Paypal integration</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="technologies mt-1">
-              <h2 class="technology-title">Technologies</h2>
-              <div class="technologie-info d-flex mt-1">
-                <p>Next js</p>
-                <p>PostgreSQL</p>
-                <p>Node js</p>
-                <p>Parse server</p>
-                <p>React material UI</p>
-                <p>Stripe integration</p>
-                <p>Paypal integration</p>
-              </div>
-            </div>
+          </div>
+        </div>
+        <div class="col col-md-12 col-lg-6">
+          <div class="">
+            <h2 class="text-start mb-3 pd-about-title">Overview</h2>
+            <p class="text-start pd-about-text">Together with vets, nutritionists and dog owners Petaments have spent a lot of time to better understand which health issues are most common in dogs and how overall life quality can be improved with the right nutrition. They wanted to build a platform where they can offer products  based on the changing needs of the dogs. Petaments wants to make sure that every dogs gets all the nutrients he/she needs to lead a long, happy, and healthy life.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section>
-    <div class="container px-4 mt-4">
+  <section class="project-content-part">
+    <div class="container">
       <div class="row gx-5 feature-row">
         <div class="col-sm-12 col-md-12 col-lg-6 text-start">
             <h2>The Situation</h2>
@@ -175,16 +175,16 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container px-4 mt-5">
-      <div class="row gx-5 feature-row">
+  <section class="project-content-part">
+    <div class="container">
+      <div class="row feature-row">
         <div class="col-sm-12 col-md-12 col-lg-6 text-start">
             <h2>The Solution</h2>
             <p class="petaments-sub-heading">A creatively crafted platform for pet lovers to address various concerns regarding the health of their loving pets.</p>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <p class="petaments-para text-start">Led by their clear vision, we helped PETAMENTS to develop creatively crafted website for pet lovers to address various concerns regarding the health of their loving pets.</p>
-          <p class="petaments-para text-start">The first task was to develop the basic architecture, with two main generalized foundation Front end and Back end. After mapping out the blue print the front end was composed of Admin and webapp. Webapp was modelled with integration of modern payment methods, namely PayPal and Stripe. The front end was equipped with custom algorithm used to generate suggestions for different product based on the visitor’s input.</p>
+          <p class="petaments-para text-start mb-0">The first task was to develop the basic architecture, with two main generalized foundation Front end and Back end. After mapping out the blue print the front end was composed of Admin and webapp. Webapp was modelled with integration of modern payment methods, namely PayPal and Stripe. The front end was equipped with custom algorithm used to generate suggestions for different product based on the visitor’s input.</p>
         </div>
       </div>
     </div>
@@ -199,25 +199,6 @@
           <p style="font-size: 14px; color: #c7c7c7;">Learning as a lifestyle</p>
         </div>
       </div>
-      <!-- <div class="columns-2">
-        <div class="f-heding text-white" style="margin-bottom: 36px;">
-          <h4 class="footer-font-style" style="font-size: 20px;">Company</h4>
-        </div>
-        <div class="footer-info">
-          <a href="">
-            <p class="f-effect">Delivering</p>
-          </a>
-          <a href="">
-            <p class="f-effect">excellence</p>
-          </a>
-          <a href="">
-            <p class="f-effect">righteously</p>
-          </a>
-          <a href="">
-            <p class="f-effect">Contact Us</p>
-          </a>
-        </div>
-      </div> -->
       <div class="columns-3">
         <div class="f-heding text-white" style="margin-bottom: 36px;">
           <h4 class="footer-font-style" style="font-size: 20px;">Partnered With</h4>
@@ -247,25 +228,7 @@
           </a>
         </div>
       </div>
-      <!-- <div class="columns-4">
-        <div class="f-heding text-white" style="margin-bottom: 36px;">
-          <h4 class="footer-font-style footer-service" style="font-size: 20px;">Services</h4>
-        </div>
-        <div class="footer-info">
-          <a href="#main-services">
-            <p class="f-effect">AI and Machine Learning</p>
-          </a>
-          <a href="#main-services">
-            <p class="f-effect">Mobile Devlopment</p>
-          </a>
-          <a href="#main-services">
-            <p class="f-effect">Web Development</p>
-          </a>
-          <a href="#main-services">
-            <p class="f-effect">DevOps</p>
-          </a>
-        </div>
-      </div> -->
+     
       <div class="columns-5">
         <div class="f-heding text-white" style="margin-bottom: 36px;">
           <h4 class="footer-font-style" style="font-size: 20px;">Have Questions?</h4>
